--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
+    "echarts": "^4.1.0",
     "vue": "^2.5.22",
+    "vue-chartjs": "^3.4.0",
+    "vue-echarts": "^4.0.1",
     "vue-router": "^3.0.2",
     "vuedraggable": "^2.17.0",
     "vuetify": "^1.3.0",
