--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "echarts": "^4.1.0",
+    "push-dir": "^0.4.1",
     "vue": "^2.5.22",
     "vue-chartjs": "^3.4.0",
     "vue-echarts": "^4.0.1",
